--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.0"
+    "@contentful/rich-text-html-renderer": "^16.0.3",
+    "astro": "^2.3.0",
+    "contentful": "^10.1.0"
   }
 }
