--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@contentful/rich-text-html-renderer": "^16.0.3",
-    "astro": "^2.3.0",
-    "contentful": "^10.1.0"
+    "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@fontsource/montserrat": "^4.5.13",
+    "@fontsource/rock-salt": "^4.5.8",
+    "astro": "^2.0.2",
+    "astro-icon": "^0.8.0",
+    "contentful": "^9.2.13",
+    "esbuild": "0.17.4"
   }
 }
