--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.13.1",
     "@fontsource/montserrat": "^4.5.13",
+    "@fontsource/roboto": "^4.5.8",
     "@fontsource/rock-salt": "^4.5.8",
     "astro": "^2.0.2",
     "astro-icon": "^0.8.0",
